c/src/test/resources/c/nec_bnc/invalid/inf5.ctrl
<controlFile>
  <sourceFile name="../inf5.c" id="1" />
  <run>
    <startPosition fileId="1" line="3" />
    <wayPoint fileId="1" line="37" />
    <wayPoint fileId="1" line="51" >
      <command>
        <cascadeFunction> cascade_check </cascadeFunction>
        <argument><![CDATA[
          f>=50 && f<=80
        ]]>
        </argument>
      </command>
    </wayPoint>
    <endPosition fileId="1" line="54" />
  </run>
</controlFile>